--- a/templates/chat/components/chatroom.html
+++ b/templates/chat/components/chatroom.html
@@ -36,9 +36,9 @@
       {% if other_user.user.last_logout %}
       <P>
         {% if other_user.user.last_logout > other_user.user.last_login %}
-        {{other_user.user.last_logout|naturaltime|timestr}}
+        En ligne {{other_user.user.last_logout|naturaltime|timestr}}
         {% else %}
-        En ligne
+        En ligne maintenant
         {% endif %}
       </P>
       {% endif %}
