--- a/templates/friends/components/invitation-received.html
+++ b/templates/friends/components/invitation-received.html
@@ -1,6 +1,8 @@
 {% load static %}
 {% load humanize %}
 {% load cloudinary %}
+{% load chat %}
+
 
 <div class="my-friends-container">
   {% for obj in qs %}
@@ -24,7 +26,7 @@
           <p>{{obj.sender.bio}}</p>
         </a>
         {% if obj.date_sender %}
-        <P>{{obj.date_sender|naturaltime}}</P>
+        <P>{{obj.date_sender|naturaltime|timestr}}</P>
         {% endif %}
 
       </div>
