--- a/templates/chat/components/list_chatroom.html
+++ b/templates/chat/components/list_chatroom.html
@@ -4,7 +4,7 @@
 {% load chat %}
 
 
-<a class="my-friends-info-link" href="{% url 'chats:chatroom' uid=obj.profile.uid %}">
+<a class="my-friends-info-link" href="{% url 'chats:chatroom' uid=obj.uid %}">
   <div class="my-friends-info-container">
     <div class="my-friends-info">
       <div id="link-profile-user">
