Confirmer la suppression de post, amélioration de vitesse de notification et quelque petit correction d'orthographe

--- a/static/notifications/css/style.css
+++ b/static/notifications/css/style.css
@@ -59,6 +59,13 @@ a:visited {
   align-items: center;
   position: relative;
 }
+.container-main .container-notif .box-notif .info-notif p {
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
 .container-main .container-notif .box-notif #bg_seen {
   width: 6px;
   height: 6px;
