--- a/static/notifications/sass/components/_notifications.sass
+++ b/static/notifications/sass/components/_notifications.sass
@@ -19,9 +19,6 @@
       margin-top: 3rem
       gap: 0.8rem
 
-    .bg_seen
-      // background-color: $color6
-
     .box-notif
       // p-left: 1.3rem
       // margin-right: 0.5rem
@@ -34,6 +31,14 @@
       grid-gap: 0.5rem
       align-items: center
       position: relative
+
+      .info-notif
+        p
+          display: -webkit-box
+          -webkit-line-clamp: 2
+          -webkit-box-orient: vertical
+          overflow: hidden
+          text-overflow: ellipsis
 
       #bg_seen
         width: 6px
