--- a/templates/friends/mynetwork.html
+++ b/templates/friends/mynetwork.html
@@ -4,7 +4,7 @@
 {% load cloudinary %}
 
 
-{% block title %} Invites {% endblock title %}
+{% block title %} My network {% endblock title %}
 
 
 {% block style %}
