--- a/templates/notifications/list-notification.html
+++ b/templates/notifications/list-notification.html
@@ -38,7 +38,7 @@
         {% elif notif.type_notif == 'invitation_send' %}
         <p>souhaite rejoindre à votre réseau</p>
         {% elif notif.type_notif == 'invitation_accepted' %}
-        <p>à accepté votre invitation desormais vous ami sur Mackdin</p>
+        <p>à accepté votre invitation desormais vous êtes ami sur Mackdin</p>
         {% endif %}
         <em>{{ notif.date_created|naturaltime|timestr }}</em>
       </div>
