Confirmer la suppression de post, amélioration de vitesse de notification, ajout de style chatroom msg envoyer (background-color:  $color20) et quelque petit correction d'orthographe

--- a/static/chat/css/style.css
+++ b/static/chat/css/style.css
@@ -507,6 +507,9 @@ hr {
 .container-main .main-chat .box-message-right {
   text-align: right;
 }
+.container-main .main-chat .box-message-right .msg p {
+  background-color: #2e8271;
+}
 .container-main .main-chat .box-message-right .msg em {
   margin-right: 5px;
 }
