--- a/static/chat/sass/components/_chatroom.sass
+++ b/static/chat/sass/components/_chatroom.sass
@@ -103,6 +103,8 @@
       // align-items: end
       text-align: right
       .msg
+        p
+          background-color: $color20
         em
           margin-right: 5px
     @media screen and (max-width:880px)
