--- a/static/chat/sass/utils/_settings.sass
+++ b/static/chat/sass/utils/_settings.sass
@@ -21,6 +21,8 @@ $color7: #979eaa
 $color8: #f31d58
 $color9: #CCCCCc
 $color10: #666464
+$color20: #0084FF
+$color20: #2e8271
 
 *, ::after, ::before
     box-sizing: border-box
