section commentaire active dans la page détail post

--- a/templates/comments/include/comment.html
+++ b/templates/comments/include/comment.html
@@ -5,7 +5,7 @@
 
 
 <form title="{{post.id}}"
-  class="form-comment-list-input-container-global {% if not post_detail %} D-none_V-hidden_O-0 {% endif %}"
+  class="form-comment-list-input-container-global {% if post_detail %} D-none_V-hidden_O-0 {% endif %}"
   id="form-comment-list-input-container-global{{post.id}}" method="post"
   action="{% url 'comments:add-update-comment' %}">
   <div class="form-comment-container-input">
