--- a/templates/post/post_list.html
+++ b/templates/post/post_list.html
@@ -70,8 +70,17 @@
 <script type="text/javascript" src=" {% static 'post/js/post_list.js' %} "></script>
 <script type="text/javascript" src=" {% static 'post/js/ajax_like_post.js' %} "></script>
 <script type="text/javascript" src=" {% static 'comments/js/comment_list.js' %} "></script>
-
 <script type="text/javascript" src=" {% static 'post/js/api-news.js' %} "></script>
+
+<!-- react js -->
+<script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
+<script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
+
+<script src=" {% static 'comments/js/react/build/components/InputForm.js' %} "></script>
+<script src=" {% static 'comments/js/react/build/components/option.js' %} "></script>
+<script src=" {% static 'comments/js/react/build/components/ListComments.js' %} "></script>
+<script src=" {% static 'comments/js/react/build/comments.js' %} "></script>
+
 
 
 {% comment %}
