--- a/templates/post/post_list.html
+++ b/templates/post/post_list.html
@@ -64,62 +64,5 @@
 {% block footer %} {% include 'home/components/footer.html' %} {% endblock footer %}
 {% endcomment %}
 
-{% block js %}
-<script type="text/javascript" src=" {% static 'components/js/index.js' %} "></script>
-<script type="text/javascript" src=" {% static 'notifications/js/notifications.js' %} "></script>
-<script type="text/javascript" src=" {% static 'post/js/post_list.js' %} "></script>
-<script type="text/javascript" src=" {% static 'post/js/ajax_like_post.js' %} "></script>
-<script type="text/javascript" src=" {% static 'comments/js/comment_list.js' %} "></script>
-<script type="text/javascript" src=" {% static 'post/js/api-news.js' %} "></script>
 
-<!-- react js -->
-<script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
-<script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
-
-<script src=" {% static 'comments/js/react/build/components/InputForm.js' %} "></script>
-<script src=" {% static 'comments/js/react/build/components/option.js' %} "></script>
-<script src=" {% static 'comments/js/react/build/components/ListComments.js' %} "></script>
-<script src=" {% static 'comments/js/react/build/comments.js' %} "></script>
-
-
-
-{% comment %}
-{% include 'post/components/ajax_like_post.html' %}
-{% include 'comments/include/ajax_comment.html' %}
-{% endcomment %}
-
-{% if page == 'update' %}
-<script>
-  const previous_container_edit = document.querySelector(
-    ".previous-new-add-post"
-  );
-  const previous_p_img_container_edit =
-    document.querySelector(".previous-post-img");
-
-  previous_container_edit.classList.remove("display-none");
-  previous_container_edit.classList.add("display-block");
-
-  previous_p_img_container_edit.classList.remove("display-none");
-  previous_p_img_container_edit.classList.add("display-block");
-</script>
-{% endif %}
-{% if page == 'list' %}
-<script>
-  try {
-    // Close image previous
-    const close_previous_p_img_container = document.querySelector(".previous-post-img");
-    const close_input_img = document.querySelector(".form-input-file");
-    const close_p_img = document.getElementById("previous-post-image");
-    const closed_img_previous = document.getElementById("close-img-previous");
-
-    closed_img_previous.addEventListener("click", (e) => {
-      close_previous_p_img_container.classList.remove("display-none");
-      close_previous_p_img_container.classList.remove("display-block");
-      close_input_img.value = ''
-      close_p_img.setAttribute("src", "");
-    })
-  } catch (error) { }
-</script>
-{% endif %}
-
-{% endblock js %}
+{% block js %} {% include 'post/components/block-js.html' %} {% endblock js %}
