--- a/static/post/sass/pages/_main-container.sass
+++ b/static/post/sass/pages/_main-container.sass
@@ -95,7 +95,7 @@
   // @media screen and (max-width:730px)
   //   .label-like-comment-share
 
-  form button
+  form button, button.like-btn
     padding: 1rem 0
     width: 100%
     background-color: $color4
