--- a/templates/post/components/post-detail.html
+++ b/templates/post/components/post-detail.html
@@ -36,7 +36,7 @@
   </div>
   {% endif %}
 
-  <div class="post-footer">
+  <!-- <div class="post-footer">
     {% include 'post/components/count-likes-comments.html' %}
     <hr />
     <div class="box-action-icon">
@@ -50,14 +50,15 @@
         <span class="label-like-comment-share">Partager</span>
       </button>
     </div>
-  </div>
+  </div> -->
 
   <div class="root-comments" data-post-id="{{ post.id }}"
     data-class-toggle-post-detail="{% if page != 'detail' %}1{% else %}0{% endif %}"
     data-url-add-update-comment="{% url 'comments:add-update-comment' %}" data-csrf-token="{{ csrf_token }}"
     data-img-profile="{% if user.profile.img_profile %}{{ user.profile.img_profile.url }}{% else %}{% static 'home/img/default-img-profile.jpg' %}{% endif %}"
     data-url-get-data="{% url 'comments:get-comment-post' post_id=post.id %}" data-nber-like="{{post.number_of_like}}"
-    data-nber-comment="{{post.post_comment.count}}"></div>
+    data-nber-comment="{{post.post_comment.count}}"
+    data-is-like="{% if user not in post.liked.all %}0{% else %}1{% endif %}"></div>
 
   {% comment %}
 
