resolution bug react

--- a/templates/post/components/block-js.html
+++ b/templates/post/components/block-js.html
@@ -9,13 +9,15 @@
 <script type="text/javascript" src=" {% static 'post/js/api-news.js' %} "></script>
 
 <!-- react js -->
-<script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
-<script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
+<!-- <script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
+<script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script> -->
+<script src="https://unpkg.com/react@18/umd/react.production.min.js" crossorigin></script>
+<script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js" crossorigin></script>
 
 <script src=" {% static 'comments/js/react/build/components/InfoLikeComment.js' %} "></script>
 <script src=" {% static 'comments/js/react/build/components/BtnLikeCommentShare.js' %} "></script>
 <script src=" {% static 'comments/js/react/build/components/InputForm.js' %} "></script>
-<script src=" {% static 'comments/js/react/build/components/option.js' %} "></script>
+<script src=" {% static 'comments/js/react/build/components/OptionComment.js' %} "></script>
 <script src=" {% static 'comments/js/react/build/components/ListComments.js' %} "></script>
 <script src=" {% static 'comments/js/react/build/comments.js' %} "></script>
 <script src=" {% static 'comments/js/react/build/index.js' %} "></script>
