correction bug navbar

--- a/templates/home/components/navbar2.html
+++ b/templates/home/components/navbar2.html
@@ -56,7 +56,7 @@
           <span class="nav-text-span">Notifications</span>
         </div>
       </a>
-
+      {% endif %}
     </ul>
   </nav>
 
