--- a/templates/home/components/navbar2.html
+++ b/templates/home/components/navbar2.html
@@ -71,6 +71,10 @@
       {% static 'home/svg/user.svg' %}
       {% endif %}" alt="">
     </div>
+    <div class="drop-down-list">
+      <span>Vous</span>
+      <img src="{% static 'home/svg/down-arrow.svg' %}" class="down-arrow">
+    </div>
   </div>
 
   <div class="list-box">
