--- a/static/components/css/style.css
+++ b/static/components/css/style.css
@@ -20,7 +20,7 @@ a:visited {
   color: #f1f1f1;
 }
 
-.flex-center, footer .footer-content .footer-content-box .footer-logo, .list-box a, .hamburger-nav-profil, .nav-profil .nav-box-profil, .nav-profil, .nav-text, nav ul a, a.logo {
+.flex-center, footer .footer-content .footer-content-box .footer-logo, .list-box a, .hamburger-nav-profil, .nav-profil .drop-down-list, .nav-profil .nav-box-profil, .nav-profil, .nav-text, nav ul a, a.logo {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -176,17 +176,33 @@ nav ul a:hover {
 .nav-profil {
   margin-right: 20px;
   cursor: pointer;
+  position: relative;
 }
 .nav-profil .nav-box-profil {
-  height: 45px;
-  width: 45px;
+  margin-bottom: 2px;
+  height: 40px;
+  width: 40px;
 }
 .nav-profil .nav-box-profil img {
-  width: 45px;
-  height: 45px;
+  width: 38px;
+  height: 38px;
   border-radius: 9999px;
   object-position: center;
   object-fit: cover;
+}
+.nav-profil .drop-down-list {
+  font-size: 13px;
+  gap: 3px;
+  position: absolute;
+  bottom: -11px;
+  left: 50%;
+  transform: translateX(-50%);
+  transform: translateY();
+}
+.nav-profil .drop-down-list img.down-arrow {
+  margin-top: 5px;
+  width: 11px;
+  height: 11px;
 }
 
 .hamburger-nav-profil {
