--- a/static/components/css/style.css
+++ b/static/components/css/style.css
@@ -20,7 +20,7 @@ a:visited {
   color: #f1f1f1;
 }
 
-.flex-center, footer .footer-content .footer-content-box .footer-logo, .list-box a, .hamburger-nav-profil, .nav-profil .drop-down-list, .nav-profil .nav-box-profil, .nav-profil, .nav-text, nav ul a, a.logo {
+.flex-center, footer .footer-content .footer-content-box .footer-logo, .hamburger-nav-profil, .nav-profil .drop-down-list, .nav-profil .nav-box-profil, .nav-profil, .nav-text, nav ul a, a.logo {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -226,27 +226,34 @@ nav ul a:hover {
 }
 
 .list-box {
-  padding: 0.5rem;
-  border-radius: 8px;
+  padding: 0.8rem 0.8rem 1.5rem 0.8rem;
+  border-top-left-radius: 8px;
+  border-bottom-right-radius: 8px;
+  border-bottom-left-radius: 8px;
   background-color: #34495e;
-  border: 1px solid #f1f1f1;
+  border: 1px solid #979eaa;
   display: flex;
   justify-content: center;
   align-items: start;
   flex-direction: column;
   gap: 1rem;
   position: absolute;
-  top: 60px;
+  top: 80px;
   right: 10px;
   transform: translateX();
   transform: translateY();
   display: none;
   opacity: 0;
   transition: all 0.3s ease-in-out;
+  z-index: 5001;
 }
 .list-box a {
+  width: 100%;
   padding-left: 1rem;
   text-transform: uppercase;
+  display: flex;
+  justify-content: start;
+  align-items: start;
   gap: 0.5rem;
 }
 .list-box a img {
