--- a/static/profiles/sass/pages/_right.sass
+++ b/static/profiles/sass/pages/_right.sass
@@ -66,7 +66,7 @@
 
     h4
       margin: 0.5rem
-      text-decoration: underline
+      // text-decoration: underline
 
     .voir-plus-box
       // margin-top: 0.5rem
