--- a/templates/notifications/list-notification.html
+++ b/templates/notifications/list-notification.html
@@ -5,7 +5,6 @@
 
 
 <div class="container-notif">
-
   {% if is_notif %}
   {% for notif in qs %}
   {% if notif.from_user != request.user and notif.to_user == request.user %}
@@ -21,11 +20,9 @@
         {% static 'home/img/default-img-profile.jpg' %}
         {% endif %}">
     </a>
-
     <a href="{% url 'notifications:seen' id=notif.id %}">
       <div class="info-notif">
         <strong>{{ notif.from_user.first_name }} {{ notif.from_user.last_name }}</strong>
-        {% if notif.type_notif == 'Like_Post' or notif.type_notif == 'Add_Post' or notif.type_notif == 'Add_Comment' %}
         <p>
           {% if notif.type_notif == 'Add_Post' %}
           à ajouter un nouveau post : {{notif.post.message}}
@@ -33,13 +30,14 @@
           à aimer votre post : {{notif.post.message}}
           {% elif notif.type_notif == 'Add_Comment' %}
           à commenter votre post : {{notif.post.message}}
+          {% elif notif.type_notif == 'invitation_send' %}
+          souhaite rejoindre à votre réseau
+          {% elif notif.type_notif == 'invitation_accepted' %}
+          à accepté votre invitation desormais vous êtes ami sur Mackdin
+          {% elif notif.type_notif == 'seen_profile' %}
+          a consulté votre profil
           {% endif %}
         </p>
-        {% elif notif.type_notif == 'invitation_send' %}
-        <p>souhaite rejoindre à votre réseau</p>
-        {% elif notif.type_notif == 'invitation_accepted' %}
-        <p>à accepté votre invitation desormais vous êtes ami sur Mackdin</p>
-        {% endif %}
         <em>{{ notif.date_created|naturaltime|timestr }}</em>
       </div>
     </a>
