--- a/static/components/sass/components/_footer.sass
+++ b/static/components/sass/components/_footer.sass
@@ -51,12 +51,17 @@ footer
         outline: none
 
     .footer-bottom
+        margin-bottom: 40px
         display: flex
         justify-content: center
         align-items: center
         color: $color7
         height: 3rem
-        // background-color: $color4
+        img
+            position: relative
+            top: 3px
+            margin-left: 2px
+            width: 15px
         a
             transition: 0.5s
             color: $color7
