--- a/static/components/sass/components/_navigation2.sass
+++ b/static/components/sass/components/_navigation2.sass
@@ -253,6 +253,22 @@ nav ul a:hover
       img
         width: 38px
         height: 38px
+@media screen and (max-width:295px)
+  a.logo
+    img
+      width: 25px
+  .nav-menu
+    gap: 4px
+    .nav-item
+      .nav-img
+        width: 30px
+  .nav-profil
+    .nav-box-profil
+      width: 30px
+      height: 30px
+      img
+        width: 35px
+        height: 35px
 
 .active
   opacity: 1
