--- a/static/comments/css/style.css
+++ b/static/comments/css/style.css
@@ -80,6 +80,7 @@ a:visited {
   border: none;
   border-radius: 40px;
   border: 1px solid #979eaa;
+  resize: none;
 }
 .form-comment-list-input-container-global .form-comment-container-input .form-content-comment .input_message_comment_id:focus {
   border: 1px solid #f1f1f1;
@@ -89,7 +90,7 @@ a:visited {
 }
 .form-comment-list-input-container-global .form-comment-container-input .btn-send-comment {
   padding: 0.5rem;
-  width: 45px;
+  width: 60px;
   background-color: #1abc9c;
   font-family: ui-sans-serif, system-ui;
   outline: none;
@@ -97,6 +98,10 @@ a:visited {
   border-radius: 10px;
   color: #f1f1f1;
   cursor: pointer;
+}
+.form-comment-list-input-container-global .form-comment-container-input .btn-send-comment[disabled] {
+  cursor: not-allowed;
+  opacity: 0.4;
 }
 .form-comment-list-input-container-global .container-global-comment-list {
   width: 100%;
