--- a/static/chat/sass/components/_chatroom.sass
+++ b/static/chat/sass/components/_chatroom.sass
@@ -84,8 +84,9 @@
           box-shadow: 0 2px 3px 0 $color6
           border-radius: 8px
           background-color: $color6
-          max-width: 90%
+          max-width: 85%
           display: inline-block
+          word-wrap: break-word
 
         em
           display: block
