--- a/static/notifications/css/style.css
+++ b/static/notifications/css/style.css
@@ -60,6 +60,8 @@ a:visited {
   position: relative;
 }
 .container-main .container-notif .box-notif .info-notif p {
+  display: inline-block;
+  word-break: break-word;
   display: -webkit-box;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
