--- a/static/notifications/sass/components/_notifications.sass
+++ b/static/notifications/sass/components/_notifications.sass
@@ -34,6 +34,8 @@
 
       .info-notif
         p
+          display: inline-block
+          word-break: break-word
           display: -webkit-box
           -webkit-line-clamp: 2
           -webkit-box-orient: vertical
