--- a/static/post/sass/pages/_add_post.sass
+++ b/static/post/sass/pages/_add_post.sass
@@ -158,6 +158,7 @@ form
     padding-bottom: 0.8rem
     p
       line-height: 130%
+      overflow-wrap: break-word
 
 .previous-post-img
   display: none
