--- a/static/comments/css/style.css
+++ b/static/comments/css/style.css
@@ -20,7 +20,7 @@ a:visited {
   color: #f1f1f1;
 }
 
-.flex-center, .comment-options-actions-container, .comment-options-btn, .form-comment-list-input-container-global .container-global-comment-list, .form-comment-list-input-container-global .form-comment-container-input .form-content-comment, .form-comment-list-input-container-global, .main-comment {
+.flex-center, .comment-options-actions-container, .comment-options-btn, .form-comment-list-input-container-global .container-global-comment-list, .form-comment-list-input-container-global .form-comment-container-input .form-content-comment, .form-comment-list-input-container-global {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -29,17 +29,6 @@ a:visited {
 .flex-column {
   display: flex;
   flex-direction: column;
-}
-
-.main-comment {
-  box-shadow: 0 2px 3px 0 #0000001a;
-  border-radius: 8px;
-  border: 1px solid #f1f1f1;
-  margin: 5.5rem auto 0;
-  width: 35rem;
-  gap: 1rem;
-  background-color: #34495e;
-  padding: 0.2rem;
 }
 
 .form-comment-list-input-container-global {
@@ -113,26 +102,23 @@ a:visited {
   margin-top: 1rem;
   width: 100%;
   position: relative;
-  display: flex;
+  display: grid;
+  grid-template-columns: 65px 1fr;
+  box-sizing: border-box;
 }
 .form-comment-list-input-container-global .container-global-comment-list .container-comment-list img#container-comment-list-img-profile {
-  position: absolute;
-  left: 0.4rem;
-  top: 0.4rem;
-  grid-area: img;
   width: 50px;
   height: 50px;
   object-position: center;
   object-fit: cover;
   border-radius: 50%;
+  margin: 0.4rem 0.4rem 0;
 }
 .form-comment-list-input-container-global .container-global-comment-list .container-comment-list .comment-content-box {
-  width: 100%;
   display: flex;
   justify-content: start;
   flex-direction: column;
   gap: 0.4rem;
-  margin-left: 62px;
   background-color: #2c3e50;
   padding: 8px;
   border-radius: 10px;
@@ -140,7 +126,6 @@ a:visited {
   margin-top: 0.3rem;
 }
 .form-comment-list-input-container-global .container-global-comment-list .container-comment-list .comment-content-box .comment-info-content {
-  width: 100%;
   display: flex;
   justify-content: start;
   align-items: top;
@@ -207,18 +192,12 @@ a:visited {
     display: none;
   }
 }
-.form-comment-list-input-container-global .container-global-comment-list .container-comment-list .comment-content-box .comment-text-content {
-  display: flex;
-  justify-content: start;
-  flex-direction: column;
-  gap: 5px;
-  width: 100%;
-  margin-top: 1rem;
-}
-.form-comment-list-input-container-global .container-global-comment-list .container-comment-list .comment-content-box .comment-text-content p {
+.form-comment-list-input-container-global .container-global-comment-list .container-comment-list .comment-content-box p {
   text-align: left;
+  display: inline-block;
+  word-break: break-word;
 }
-.form-comment-list-input-container-global .container-global-comment-list .container-comment-list .comment-content-box .comment-text-content textarea {
+.form-comment-list-input-container-global .container-global-comment-list .container-comment-list .comment-content-box textarea {
   width: 100%;
   padding: 5px;
   border-radius: 8px;
@@ -229,12 +208,12 @@ a:visited {
   font-family: ui-sans-serif, system-ui;
   border: 1px solid #1abc9c;
 }
-.form-comment-list-input-container-global .container-global-comment-list .container-comment-list .comment-content-box .comment-text-content .box-btn {
+.form-comment-list-input-container-global .container-global-comment-list .container-comment-list .comment-content-box .box-btn {
   display: flex;
   justify-content: start;
   gap: 8px;
 }
-.form-comment-list-input-container-global .container-global-comment-list .container-comment-list .comment-content-box .comment-text-content .box-btn button, .form-comment-list-input-container-global .container-global-comment-list .container-comment-list .comment-content-box .comment-text-content .box-btn .cancel {
+.form-comment-list-input-container-global .container-global-comment-list .container-comment-list .comment-content-box .box-btn button, .form-comment-list-input-container-global .container-global-comment-list .container-comment-list .comment-content-box .box-btn .cancel {
   padding: 2px 8px;
   border-radius: 8px;
   background-color: #1abc9c;
@@ -244,11 +223,11 @@ a:visited {
   border: 1px solid #1abc9c;
   cursor: pointer;
 }
-.form-comment-list-input-container-global .container-global-comment-list .container-comment-list .comment-content-box .comment-text-content .box-btn .cancel {
+.form-comment-list-input-container-global .container-global-comment-list .container-comment-list .comment-content-box .box-btn .cancel {
   background-color: #34495e;
   border: 1px solid #34495e;
 }
-.form-comment-list-input-container-global .container-global-comment-list .container-comment-list .comment-content-box .comment-text-content .box-btn button[disabled] {
+.form-comment-list-input-container-global .container-global-comment-list .container-comment-list .comment-content-box .box-btn button[disabled] {
   cursor: not-allowed;
   opacity: 0.4;
 }
