--- a/static/comments/sass/components/_comment.sass
+++ b/static/comments/sass/components/_comment.sass
@@ -1,19 +1,6 @@
-.main-comment
-  box-shadow: 0 2px 3px 0 $color6
-  border-radius: 8px
-  border: 1px solid $color2
-  @extend .flex-center
-  margin: 5.5rem auto 0
-  width: 35rem
-  gap: 1rem
-  background-color: $color4
-  padding: 0.2rem
-  // height: 35rem
-
 .form-comment-list-input-container-global
   width: 100%
   border-radius: 8px
-  // border: 1px solid $color2
   @extend  .flex-center
   flex-direction: column
   gap: 0.4rem
@@ -23,9 +10,6 @@
 
   .form-comment-container-input
     width: 100%
-    // display: grid
-    // grid-template-columns: 1fr 45px
-    // @include flex-el(null, end)
     display: flex
     padding: 0.5rem
     gap: 0.1rem
@@ -81,30 +65,25 @@
     gap: 0.3rem
 
     .container-comment-list
-      // border: 1px solid #fb0808
       margin-top: 1rem
       width: 100%
       position: relative
-      display: flex
+      display: grid
+      grid-template-columns: 65px 1fr
+      box-sizing: border-box
 
       img#container-comment-list-img-profile
-        position: absolute
-        left: 0.4rem
-        top: 0.4rem
-        grid-area: img
         width: 50px
         height: 50px
         object-position: center
         object-fit: cover
         border-radius: 50%
+        margin: 0.4rem 0.4rem 0
 
       .comment-content-box
-        // border: 1px solid #fff
-        width: 100%
         @include flex-el(start, null)
         flex-direction: column
         gap: 0.4rem
-        margin-left: 62px
         background-color: $color1
         padding: 8px
         border-radius: 10px
@@ -112,7 +91,6 @@
         margin-top: 0.3rem
 
         .comment-info-content
-          width: 100%
           @include flex-el(start, top)
           flex-direction: column
           gap: 0
@@ -122,9 +100,6 @@
             flex-direction: column
             strong
               width: 100%
-
-              // a
-              //   width: 100%
               #author_post_and_comment
                 padding: 0.1rem 0.5rem
                 margin-left: 0.5rem
@@ -132,7 +107,6 @@
                 border-radius: 8px
             p#comment-author-profile-title
               text-align: left
-              // width: 100%
               font: size 13px
               color: $color7
               display: -webkit-box
@@ -170,39 +144,43 @@
                 #author_post_and_comment
                   display: none
 
-        .comment-text-content
-          @include flex-el(start, null)
-          flex-direction: column
-          gap: 5px
+        // .comment-text-content
+        //   // @include flex-el(start, null)
+        //   // flex-direction: column
+        //   // gap: 5px
+        //   // width: 100%
+        //   margin-top: 1rem
+        //   overflow-wrap: break-word
+        //   border: 1px solid orange
+        p
+          text-align: left
+          display: inline-block
+          word-break: break-word
+        textarea
           width: 100%
-          margin-top: 1rem
-          p
-            text-align: left
-          textarea
-            width: 100%
-            padding: 5px
+          padding: 5px
+          border-radius: 8px
+          resize: none
+          background-color: $color1
+          color: $color2
+          font-size: 16px
+          font-family: $font1
+          border: 1px solid $color3
+        .box-btn
+          @include flex-el(start, null)
+          gap: 8px
+          button, .cancel
+            padding: 2px 8px
             border-radius: 8px
-            resize: none
-            background-color: $color1
+            background-color: $color3
             color: $color2
             font-size: 16px
             font-family: $font1
             border: 1px solid $color3
-          .box-btn
-            @include flex-el(start, null)
-            gap: 8px
-            button, .cancel
-              padding: 2px 8px
-              border-radius: 8px
-              background-color: $color3
-              color: $color2
-              font-size: 16px
-              font-family: $font1
-              border: 1px solid $color3
-              cursor: pointer
-            .cancel
-              background-color: $color4
-              border: 1px solid $color4
-            button[disabled]
-              cursor: not-allowed
-              opacity: 0.4
+            cursor: pointer
+          .cancel
+            background-color: $color4
+            border: 1px solid $color4
+          button[disabled]
+            cursor: not-allowed
+            opacity: 0.4
